# GrokVoiceAgent

./: dispatch-rule-bell.json  dispatch-rule-telnek.json  dispatch-rule.json  inbound-trunk-bell.json  inbound-trunk-telnek.json  inbound-trunk.json  livekit.toml  pyproject.toml  run_telnek.bat
src/: agent.py
